--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ body {
 </style> 
 
 <div style="text-align:center">
-     <iframe src="https://rodri042.github.io/nestation/" width="100%" height="90%" style="background-image: url(container-bkg-img.png)" allowfullscreen>
+     <iframe src="https://rodri042.github.io/nestation/" width="100%" height="700px" style="background-image: url(container-bkg-img.png)" allowfullscreen>
      </iframe>
 </div>
 
