--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ body {
 </style> 
 
 <div style="text-align:center">
-     <iframe src="https://rodri042.github.io/nestation/" width="90%" height="90%" style="background-image: url(container-bkg-img.png)" allowfullscreen>
+     <iframe src="https://rodri042.github.io/nestation/" width="100%" height="100%" style="background-image: url(container-bkg-img.png)" allowfullscreen>
      </iframe>
 </div>
 
-<div style="text-align:center">
-<form>
-    <button formaction="https://lubasz4gaming.forumotion.com/">Go to Lubasz4gaminG Forum</button>
-</form>
-</div>
+///<div style="text-align:center">
+///<form>
+    ///<button formaction="https://lubasz4gaming.forumotion.com/">Go to Lubasz4gaminG Forum</button>
+///</form>
+///</div>
