--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ body {
      </iframe>
 </div>
 
-<div style="text-align:center">
-<form>
-    <button formaction="https://lubasz4gaming.forumotion.com/">Go to Lubasz4gaminG Forum</button>
-</form>
-</div>
+///<div style="text-align:center">
+///<form>
+    ///<button formaction="https://lubasz4gaming.forumotion.com/">Go to Lubasz4gaminG Forum</button>
+///</form>
+///</div>
