--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
 body {
-  background-image: url('https://i.servimg.com/u/f84/19/43/75/31/forumb10.jpg');
+  background-image: url('https://i.servimg.com/u/f84/19/43/75/31/forumb10.jpg'); overflow:hidden;
 </style>
 
 <div style="text-align:center">
